20140304 - fhabermann
* enable accordion open-close on full title bar (Closes #23)
* added bootboxjs
* added restore button for content

20130301 - Knowledgeroot 2 alpha1

20140105 - fhabermann
* renew move content up and down to fix existing problems (Closes #6)

20131223 - fhabermann
* added tag support for content (Closes #15)

20131116 - fhabermann
* added alias handling (Closes #13)

20131108 - fhabermann
* added first implementation for content move up and down

20131026 - fhabermann
* added favicon (Closes: #22)

20131019 - fhabermann
* added select content option for file upload

20131018 - fhabermann
* enable move of content
* added select page option for page
* added select page option for content

20131017 - fhabermann
* composer update
* added gitignore
* using better layout for page description and table of content
* enable move of page

20131016 - fhabermann
* added subtitle, table of contents and descripion for page
* show created by and create date for page
* enable show of page history

20131014 - fhabermann
* added anker.js to handle ankers

20131010 - fhabermann
* added option to enable default rights for active user in permission panel
* enabled automatic set of contentid on fileupload modal

20131006 - fhabermann
* using javascript confirm to delete a file
* added acl check on delete file in html template

20130917 - fhabermann
* return user or date object on Knowledgeroot_Content
* show last change infos on content
* show create date and created by informations for content

20130916 - fhabermann
* added new class Knowledgeroot_Timezone to get timezones
* show language dropdown only for guest users
* show add group and add user in menu if you have the rights
* enable saving of personal settings
* updated gettext template
* show user date in locale format

21030915 - fhabermann
* enabled timezone handling for user in Knowledgeroot_Date
* added timezone to user session

20130913 - fhabermann
* added js to print content on open print window